samples/_failures_safe/1760887009_5ed023_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_761438de.c: In function ‘main’:
./samples/SAFE/__tmp_761438de.c:154:9: error: expected declaration or statement at end of input
  154 |         }
      |         ^
./samples/SAFE/__tmp_761438de.c:154:9: error: expected declaration or statement at end of input
